2021-04-27  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--advice--shell-guess-fallback): Handle all
	input options (emacs bug 48071)
	(diredc-do-async-shell-command): Validate input (emacs bug 48072).

2021-04-25  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-do-async-shell-command): Guarantee return to
	correct diredc window.

2021-04-25  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-do-async-shell-command): New function.
	(diredc--create-keymap): Set keybinding for it.

2021-04-24  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-wdired): Record state of dired-omit-mode
	(diredc--advice--wdired-exit): Use it.

2021-04-24  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-trash-empty): clear minibuffer message upon
	completeion.

2021-04-22  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-async-processes-are-persistent): New defcustom.
	(diredc--advice--dired-run-shell-command): Use it.
	(diredc-mode): Use the advice function.

2021-04-20  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-summary, diredc-key-assist)
	(diredc-trash-key-assist): New help functions.
	(diredc--create-keymap): Assign keybindings for them.

2021-04-20  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-hist--history-list): Add dired-omit-mode state
	to history records.
	(diredc--set-omit-mode): Inline function to set dired-omit-mode.
	(diredc-hist--hook-function)
	(diredc-hist--update-directory-history),
	(diredc-hist--prune-deleted-directories)
	(diredc-hist-previous-directory, diredc-hist-change-directory)
	(diredc-hist-up-directory, diredc-hist-select)
	(diredc-hist-duplicate, diredc-hist-find-file)
	(diredc-hist-find-file-other-window)
	(diredc-hist-find-alternate-file): Use them.

2021-04-20  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-hist-duplicate): Signal when no action to be
	taken, remove unnecessary set-buffer operations.

2021-03-16  Boruch Baum  <boruch_baum@gmx.com>
