@@ -3,6 +3,9 @@
 	* diredc.el (diredc--advice--shell-guess-fallback): Handle all
 	input options (emacs bug 48071)
 	(diredc-do-async-shell-command): Validate input (emacs bug 48072).
+	(diredc--advice--dired-read-shell-command): New advice, for
+	synchronous calls.
+	(diredc-mode): Use it.
 
 2021-04-25  Boruch Baum  <boruch_baum@gmx.com>
 
